--- a/recursos/estilos/styleMun.css
+++ b/recursos/estilos/styleMun.css
@@ -35,10 +35,15 @@ font-family: "love";
     position: relative;
     color: white;
 }
-/* texto */
-.centrar{
-    
-    margin: 0 auto;
+/* imagen */
+.imagen{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;  
+    max-width: 100%;
+    max-height: 100%;
+    min-width: auto;
+    min-height: auto;
 }
 
 .titulo{
