--- a/recursos/estilos/styleMun.css
+++ b/recursos/estilos/styleMun.css
@@ -26,14 +26,15 @@
 .fuenteSubtitulos{
 font-family: "love";
     font-size:35px;
-    position: relative;
-    color: white;
+    text-align: center;
+    color: rgb(0, 0, 0);
 }
 .fuenteParrafos{
     font-family: "redonda";
     font-size:18px;
     position: relative;
-    color: white;
+    text-align: justify;
+    color: rgb(0, 0, 0);
 }
 /* imagen */
 .imagen{
