--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url(fondo.jpeg);        
+    background-image: url(recursos/imagenes/fondo.jpeg);        
 }
 
 a{   text-decoration:none;
